add tests to disable GUI - especially when run in sphinx

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7039df788453ba7509c89507987de257dcdfc90b4472b581c291162edd7b327c"
+  "signature": "sha256:dce2760f8b742ed40a579d2e9ce5e272dd19b955be981980c7fa4ff0fb9cfb17"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -53,7 +53,13 @@
      "collapsed": false,
      "input": [
       "# just to ensure compatibility of this notebook with python 2 and 3\n",
-      "from __future__ import print_function"
+      "from __future__ import print_function\n",
+      "# the following to avoid display when this notebook is converted to sphinx doc\n",
+      "import sys\n",
+      "if 'sphinx' in sys.modules:\n",
+      "    use_gui = False\n",
+      "else:\n",
+      "    use_gui = True"
      ],
      "language": "python",
      "metadata": {},
@@ -260,29 +266,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import sys\n",
-      "# note that the qt backend may be either PyQt4 or PySide.\n",
-      "from soma.qt_gui import qt_backend\n",
-      "qt_backend.set_qt_backend('PyQt4')\n",
-      "from soma.qt_gui.qt_backend import QtGui\n",
-      "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
+      "if globals().get('use_gui', True):\n",
+      "    import sys\n",
+      "    # note that the qt backend may be either PyQt4 or PySide.\n",
+      "    from soma.qt_gui import qt_backend\n",
+      "    qt_backend.set_qt_backend('PyQt4')\n",
+      "    from soma.qt_gui.qt_backend import QtGui\n",
+      "    from capsul.qt_gui.widgets import PipelineDevelopperView\n",
       "\n",
-      "# here we determine whether the Qt GUI is already running or not.\n",
-      "run_qt_loop = False\n",
-      "if QtGui.QApplication.instance() is None:\n",
-      "    app = QtGui.QApplication(sys.argv)\n",
-      "    run_qt_loop = True\n",
-      "else:\n",
-      "    app = QtGui.QApplication.instance()\n",
-      "# in the following we will reuse this run_qt_loop variable for simplicity\n",
+      "    # here we determine whether the Qt GUI is already running or not.\n",
+      "    run_qt_loop = False\n",
+      "    if QtGui.QApplication.instance() is None:\n",
+      "        app = QtGui.QApplication(sys.argv)\n",
+      "        run_qt_loop = True\n",
+      "    else:\n",
+      "        app = QtGui.QApplication.instance()\n",
+      "    # in the following we will reuse this run_qt_loop variable for simplicity\n",
       "\n",
-      "# now the real thing for pipeline viewing    \n",
-      "view1 = PipelineDevelopperView(pipeline1)\n",
-      "view1.show()\n",
+      "    # now the real thing for pipeline viewing    \n",
+      "    view1 = PipelineDevelopperView(pipeline1)\n",
+      "    view1.show()\n",
       "\n",
-      "if run_qt_loop:\n",
-      "    print('close window to gon on...')\n",
-      "    app.exec_()"
+      "    if run_qt_loop:\n",
+      "        print('close window to gon on...')\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -300,14 +307,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from soma.qt_gui.controller_widget import ControllerWidget\n",
+      "if globals().get('use_gui', True):\n",
+      "    from soma.qt_gui.controller_widget import ControllerWidget\n",
       "\n",
-      "controller1 = ControllerWidget(pipeline1, live=True)\n",
-      "controller1.show()\n",
-      "controller2 = ControllerWidget(pipeline1, live=True)\n",
-      "controller2.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()"
+      "    controller1 = ControllerWidget(pipeline1, live=True)\n",
+      "    controller1.show()\n",
+      "    controller2 = ControllerWidget(pipeline1, live=True)\n",
+      "    controller2.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -345,10 +353,11 @@
      "collapsed": false,
      "input": [
       "pipeline2 = Pipeline2()\n",
-      "view2 = PipelineDevelopperView(pipeline2)\n",
-      "view2.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()"
+      "if globals().get('use_gui', True):\n",
+      "    view2 = PipelineDevelopperView(pipeline2)\n",
+      "    view2.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -421,17 +430,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import sys\n",
-      "from soma.qt_gui.qt_backend import QtGui\n",
-      "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
-      "from soma.qt_gui.controller_widget import ControllerWidget\n",
+      "if globals().get('use_gui', True):\n",
+      "    import sys\n",
+      "    from soma.qt_gui.qt_backend import QtGui\n",
+      "    from capsul.qt_gui.widgets import PipelineDevelopperView\n",
+      "    from soma.qt_gui.controller_widget import ControllerWidget\n",
       "\n",
-      "view = PipelineDevelopperView(xmlpipe)\n",
-      "controller = ControllerWidget(xmlpipe, live=True)\n",
-      "view.show()\n",
-      "controller.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()"
+      "    view = PipelineDevelopperView(xmlpipe)\n",
+      "    controller = ControllerWidget(xmlpipe, live=True)\n",
+      "    view.show()\n",
+      "    controller.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -472,10 +482,11 @@
      "collapsed": false,
      "input": [
       "pipeline3 = Pipeline3()\n",
-      "view3 = PipelineDevelopperView(pipeline3, allow_open_controller=True, show_sub_pipelines=True)\n",
-      "view3.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()"
+      "if globals().get('use_gui', True):\n",
+      "    view3 = PipelineDevelopperView(pipeline3, allow_open_controller=True, show_sub_pipelines=True)\n",
+      "    view3.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -486,9 +497,10 @@
      "collapsed": false,
      "input": [
       "pipeline3.switch = \"case2\"\n",
-      "view3.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()"
+      "if globals().get('use_gui', True):\n",
+      "    view3.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()"
      ],
      "language": "python",
      "metadata": {},
@@ -557,17 +569,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import sys\n",
-      "from soma.qt_gui.qt_backend import QtGui\n",
-      "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
-      "from soma.qt_gui.controller_widget import ControllerWidget\n",
+      "if globals().get('use_gui', True):\n",
+      "    from soma.qt_gui.qt_backend import QtGui\n",
+      "    from capsul.qt_gui.widgets import PipelineDevelopperView\n",
+      "    from soma.qt_gui.controller_widget import ControllerWidget\n",
       "\n",
-      "view = PipelineDevelopperView(xmlpipe)\n",
-      "controller = ControllerWidget(xmlpipe, live=True)\n",
-      "view.show()\n",
-      "controller.show()\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()\n"
+      "    view = PipelineDevelopperView(xmlpipe)\n",
+      "    controller = ControllerWidget(xmlpipe, live=True)\n",
+      "    view.show()\n",
+      "    controller.show()\n",
+      "    if run_qt_loop:\n",
+      "        app.exec_()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -854,13 +866,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
+      "if globals().get('use_gui', True):\n",
+      "    from capsul.qt_gui.widgets import PipelineDevelopperView\n",
       "\n",
-      "pv = PipelineDevelopperView(pipeline, allow_open_controller=True, show_sub_pipelines=True)\n",
-      "pv.show()\n",
+      "    pv = PipelineDevelopperView(pipeline, allow_open_controller=True, show_sub_pipelines=True)\n",
+      "    pv.show()\n",
       "\n",
-      "if run_qt_loop:\n",
-      "    app.exec_()\n"
+      "    if run_qt_loop:\n",
+      "        app.exec_()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -939,9 +952,10 @@
       "import sys\n",
       "import os\n",
       "from capsul.api import StudyConfig\n",
-      "from soma.qt_gui.controller_widget import ScrollControllerWidget\n",
-      "from capsul.attributes.completion_engine import ProcessCompletionEngine\n",
-      "from capsul.qt_gui.widgets.attributed_process_widget import AttributedProcessWidget\n",
+      "if globals().get('use_gui', True):\n",
+      "    from soma.qt_gui.controller_widget import ScrollControllerWidget\n",
+      "    from capsul.attributes.completion_engine import ProcessCompletionEngine\n",
+      "    from capsul.qt_gui.widgets.attributed_process_widget import AttributedProcessWidget\n",
       "\n",
       "# the following 4 lines are a hack to add /tmp/capsul_demo to the FOM search path\n",
       "# before it is used by StudyConfig\n",
@@ -975,18 +989,19 @@
       "attributes.center = 'subjects'\n",
       "attributes.subject = 'irm2'\n",
       "\n",
-      "# pipeline controller GUI\n",
-      "p_view = ScrollControllerWidget(mp, live=True)\n",
-      "p_view.show()\n",
-      "# attributed pipeline controller GUI\n",
-      "ap_view = AttributedProcessWidget(mp)\n",
-      "ap_view.show()\n",
+      "if globals().get('use_gui', True):\n",
+      "    # pipeline controller GUI\n",
+      "    p_view = ScrollControllerWidget(mp, live=True)\n",
+      "    p_view.show()\n",
+      "    # attributed pipeline controller GUI\n",
+      "    ap_view = AttributedProcessWidget(mp)\n",
+      "    ap_view.show()\n",
       "\n",
-      "pv = PipelineDevelopperView(mp, allow_open_controller=True, show_sub_pipelines=True)\n",
-      "pv.show()\n",
+      "    pv = PipelineDevelopperView(mp, allow_open_controller=True, show_sub_pipelines=True)\n",
+      "    pv.show()\n",
       "\n",
-      "if run_qt_loop:\n",
-      "  app.exec_()\n"
+      "    if run_qt_loop:\n",
+      "      app.exec_()\n"
      ],
      "language": "python",
      "metadata": {},
@@ -1036,7 +1051,9 @@
       "if study_config.use_nipype:\n",
       "    betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
       "    betpipe.get_help()\n",
-      "    betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\""
+      "    betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\"\n",
+      "else:\n",
+      "    print('NiPype is not present.')"
      ],
      "language": "python",
      "metadata": {},
