convert notebooks to sphinx docs if nbsphinx module is present, and include it in docs

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -55,8 +55,8 @@
       "# just to ensure compatibility of this notebook with python 2 and 3\n",
       "from __future__ import print_function\n",
       "# the following to avoid display when this notebook is converted to sphinx doc\n",
-      "import sys\n",
-      "if 'sphinx' in sys.modules:\n",
+      "import os\n",
+      "if os.environ.get('ALLOW_GUI', 'TRUE') in ('FALSE', '0'):\n",
       "    use_gui = False\n",
       "else:\n",
       "    use_gui = True"
@@ -952,9 +952,9 @@
       "import sys\n",
       "import os\n",
       "from capsul.api import StudyConfig\n",
+      "from capsul.attributes.completion_engine import ProcessCompletionEngine\n",
       "if globals().get('use_gui', True):\n",
       "    from soma.qt_gui.controller_widget import ScrollControllerWidget\n",
-      "    from capsul.attributes.completion_engine import ProcessCompletionEngine\n",
       "    from capsul.qt_gui.widgets.attributed_process_widget import AttributedProcessWidget\n",
       "\n",
       "# the following 4 lines are a hack to add /tmp/capsul_demo to the FOM search path\n",
