fix for python2/3
added metadata for syntax highlighting in nbsphinx

--- a/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
@@ -1,7 +1,24 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:53f5ffbbccdd5d7a405c5ed7ee4926c4c2b9abc3d08f68cbd0e9e37db9ce2c78"
+  "signature": "sha256:53f5ffbbccdd5d7a405c5ed7ee4926c4c2b9abc3d08f68cbd0e9e37db9ce2c78",
+  "kernelspec": {
+    "name": "python2",
+    "display_name": "Python 2",
+    "language": "python"
+  },
+  "language_info": {
+    "mimetype": "text/x-python",
+    "nbconvert_exporter": "python",
+    "name": "python",
+    "pygments_lexer": "ipython2",
+    "version": "2.7.12",
+    "file_extension": ".py",
+    "codemirror_mode": {
+      "version": 2,
+      "name": "ipython"
+    }
+  }
  },
  "nbformat": 3,
  "nbformat_minor": 0,
