--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,24 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dce2760f8b742ed40a579d2e9ce5e272dd19b955be981980c7fa4ff0fb9cfb17"
+  "signature": "sha256:dce2760f8b742ed40a579d2e9ce5e272dd19b955be981980c7fa4ff0fb9cfb17",
+  "kernelspec": {
+    "name": "python2",
+    "display_name": "Python 2",
+    "language": "python"
+  },
+  "language_info": {
+    "mimetype": "text/x-python",
+    "nbconvert_exporter": "python",
+    "name": "python",
+    "pygments_lexer": "ipython2",
+    "version": "2.7.12",
+    "file_extension": ".py",
+    "codemirror_mode": {
+      "version": 2,
+      "name": "ipython"
+    }
+  }
  },
  "nbformat": 3,
  "nbformat_minor": 0,
