make notebooks usable for nbsphinx with python2 or python3

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -3,19 +3,17 @@
   "name": "",
   "signature": "sha256:dce2760f8b742ed40a579d2e9ce5e272dd19b955be981980c7fa4ff0fb9cfb17",
   "kernelspec": {
-    "name": "python2",
-    "display_name": "Python 2",
+    "name": "python",
+    "display_name": "Python",
     "language": "python"
   },
   "language_info": {
     "mimetype": "text/x-python",
     "nbconvert_exporter": "python",
     "name": "python",
-    "pygments_lexer": "ipython2",
-    "version": "2.7.12",
+    "pygments_lexer": "ipython",
     "file_extension": ".py",
     "codemirror_mode": {
-      "version": 2,
       "name": "ipython"
     }
   }
