--- a/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
@@ -1,21 +1,19 @@
 {
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python",
    "language": "python",
-   "name": "python2"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
+    "name": "ipython"
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12+"
+   "pygments_lexer": "ipython"
   },
   "name": ""
  },
