setup the GUI stuff in the 1st cell, and don't force PyQt4 since ipython / QT_API envar may have already chosen a different implementation

--- a/doc/source/_static/tutorial/capsul_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_tutorial.ipynb
@@ -63,7 +63,9 @@
     "    use_gui = False\n",
     "else:\n",
     "    %gui qt4\n",
-    "    use_gui = True"
+    "    use_gui = True\n",
+    "    from soma.qt_gui import qt_backend\n",
+    "    qt_backend.set_qt_backend()"
    ]
   },
   {
@@ -351,8 +353,6 @@
     "if globals().get('use_gui', True):\n",
     "    import sys\n",
     "    # note that the qt backend may be either PyQt4 or PySide.\n",
-    "    from soma.qt_gui import qt_backend\n",
-    "    qt_backend.set_qt_backend('PyQt4')\n",
     "    from soma.qt_gui.qt_backend import QtGui\n",
     "    from capsul.qt_gui.widgets import PipelineDevelopperView\n",
     "\n",
@@ -1282,16 +1282,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "ok if we don't use it anymore, we can remove this workflow file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1698,16 +1703,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<h2>Now Cleanup the files we have created...</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
