--- a/doc/source/_static/tutorial/capsul_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_tutorial.ipynb
@@ -102,11 +102,6 @@
     "    def _run_process(self):\n",
     "        self.out = self.f + self.ff\n",
     "        print('Process1 execution, f:', self.f, ', ff:', self.ff)\n",
-    "        \n",
-    "    # we define get_commandline() just to be able to run it without loading a module\n",
-    "    # in execution examples below\n",
-    "    def get_commandline(self):\n",
-    "        return ['echo', 'Process1 execution, f: %f, ff: %f' % (self.f, self.ff)]\n",
     "\n",
     "process = Process1()\n",
     "print(process.user_traits().keys())\n",
@@ -134,10 +129,6 @@
     "        self.add_trait(\"a\", Float(output=True))\n",
     "        self.add_trait(\"b\", Str(output=False))\n",
     "        \n",
-    "    def _run_process(self):\n",
-    "        print(\"Process2 execution, a:\", self.a, \", b:\", self.b)\n",
-    "\n",
-    "    # we define get_commandline() just to be able to run it without loading a module\n",
     "    def get_commandline(self):\n",
     "        return ['echo', 'Process2 execution, a: %f, b: %s' % (self.a, self.b)]\n"
    ]
@@ -175,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>This is a pure Python function with an XML Process description in the @xml_process decorator. Inside <code>&lt;process&gt;</code> and <code>&lt;/process&gt;</code> elements, each input parameters are described as well as the returned value. The parameters are typed and a description is asked in order to generate proper tooltips or documentations.</p>\n",
+    "<p>This is a pure Python function with an XML Process description in the @xml_process decorator. Inside <code>&lt;process&gt;</code> and <code>&lt;/process&gt;</code> elements, each input parameters are described as well as the returned value. The parameters are typed and a description is asked in order to generate proper tooltips or documentations. See <a href=\"http://neurospin.github.io/capsul/user_guide_tree/xml_spec.html\">XML specifications</a> for more information.</p>\n",
     "\n",
     "<p>We can now create a Process from this Python function:</p>"
    ]
@@ -387,7 +378,7 @@
    "source": [
     "<h3>Defining a Pipeline from XML a file</h3>\n",
     "\n",
-    "A Pipeline can be described from an xml file. For the documentation of the description glossary, please refere to the capsul documentation. In the following example we will use the 'xml_pipeline.xml' test description:"
+    "A Pipeline can be described from an xml file. For the documentation of the description glossary, please refere to the capsul documentation. In the following example we will use the 'xml_pipeline.xml' test description. See <a href=\"http://neurospin.github.io/capsul/user_guide_tree/xml_spec.html\">XML specifications</a> for more information."
    ]
   },
   {
@@ -500,6 +491,7 @@
    "outputs": [],
    "source": [
     "pipeline3.switch = \"case2\"\n",
+    "\n",
     "if globals().get('use_gui', True):\n",
     "    view3.show()\n",
     "    if run_qt_loop:\n",
@@ -936,7 +928,7 @@
     "from capsul.api import StudyConfig\n",
     "\n",
     "study_config = StudyConfig(\n",
-    "    modules=[\"SmartCachingConfig\", \"FSLConfig\"],\n",
+    "    modules=[\"FSLConfig\"],\n",
     "    fsl_config=\"/etc/fsl/5.0/fsl.sh\",\n",
     "    use_smart_caching=True,\n",
     "    output_directory=\"/tmp/capsul_demo\")\n",
@@ -981,8 +973,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Process1(Process):\n",
+    "    f = Float(output=False)\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(Process1, self).__init__()\n",
+    "        self.add_trait(\"ff\", Float(output=False))\n",
+    "        self.add_trait(\"out\", Float(output=True))\n",
+    "        \n",
+    "    def get_commandline(self):\n",
+    "        return ['echo', 'Process1 execution, f: %f, ff: %f' % (self.f, self.ff)]\n",
+    "\n",
+    "class Process2(Process):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Process2, self).__init__()\n",
+    "        self.add_trait(\"a\", Float(output=True))\n",
+    "        self.add_trait(\"b\", Str(output=False))\n",
+    "        \n",
+    "    def get_commandline(self):\n",
+    "        return ['echo', 'Process2 execution, a: %f, b: %s' % (self.a, self.b)]\n",
+    "\n",
+    "class Pipeline2(Pipeline):\n",
+    "\n",
+    "    def pipeline_definition(self):\n",
+    "        # Create processes\n",
+    "        self.add_process(\"node1\", Process1())\n",
+    "        self.add_process(\"node2\", Process2())\n",
+    "        # links\n",
+    "        self.add_link('node2.a->node1.ff')\n",
+    "        # custom exports\n",
+    "        self.export_parameter(\"node2\", \"b\", \"node_string\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from capsul.pipeline.pipeline_workflow import workflow_from_pipeline\n",
     "\n",
+    "pipeline2 = get_process_instance(Pipeline2)\n",
     "workflow = workflow_from_pipeline(pipeline2)\n",
     "print('jobs:', workflow.jobs)\n",
     "print('dependencies:', workflow.dependencies)"
@@ -1080,6 +1112,171 @@
     "wf_id = [wf for wf in wf_list if wf not in init_wf_list][0]\n",
     "print('workflow id:', wf_id)\n",
     "wc.delete_workflow(wf_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Use thirdparty software in Capsul</h1>\n",
+    "\n",
+    "Some thirdparty software nedd to be configured before they are called. StudyConfig is used to hold this\n",
+    "configuration. There are a set of modules that can be modified to enable/disable configuration of thirdparty \n",
+    "software.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from capsul.api import StudyConfig\n",
+    "\n",
+    "print(StudyConfig.default_modules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to change modules that are used, one must give a full module list to StudyConfig():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study_config = StudyConfig(modules=StudyConfig.default_modules + ['BrainVISAConfig', 'NipypeConfig'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Use FSL in Capsul</h2>\n",
+    "\n",
+    "FSL is called via specific subprocess-like functions taking into account a \n",
+    "configuration done in StudyConfig. If a StudyConfig is not\n",
+    "configured to use FSL, it may be automatically configured. Automatic\n",
+    "configuration had been tested in the two following cases :\n",
+    "<ol>\n",
+    "    <li>FSL was installed from the FMRIB site and, at least, FSLDIR \n",
+    "    environment variable is set (fsl.sh can be sourced or not)</li>\n",
+    "    <li>FSL was installed from Neurodebian packages</li>\n",
+    "</ol>\n",
+    "\n",
+    "Automatic configuration is done lazily. To start it, one must either use `StudyConfig(use_fsl=True)` or use one of the calling functions of `capsul.subprocess.fsl`.\n",
+    "\n",
+    "For calling FSL command with `capsul.subprocess.fsl` module, the first argument of\n",
+    "command line must be the FSL executable without any path nor prefix. \n",
+    "Prefix are used in Neurodebian install. For instance on Ubuntu 16.04 \n",
+    "Neurodebian FSL commands are prefixed with `fsl5.0-`.\n",
+    "The appropriate path and eventualy prefix are added from the configuration\n",
+    "of the `StudyConfig` instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import os.path as osp\n",
+    "import tempfile\n",
+    "\n",
+    "from traits.api import File, Undefined\n",
+    "\n",
+    "from capsul.api import StudyConfig, Process\n",
+    "from capsul.subprocess import fsl\n",
+    "    \n",
+    "class Bet(Process):\n",
+    "    '''\n",
+    "    A process that calls bet command without any parameter except imput and output files.\n",
+    "    '''\n",
+    "    input_image = File(optional=False, output=False)\n",
+    "    output_image = File(optional=False, output=True)\n",
+    "    \n",
+    "\n",
+    "    def _run_process(self):\n",
+    "        fsl.check_call(self.study_config, ['bet', self.input_image, self.output_image])\n",
+    "    \n",
+    "try:\n",
+    "    study_config = StudyConfig(use_fsl=True)\n",
+    "except EnvironmentError as e:\n",
+    "    # If FSL cannot be configured automatically, tells why\n",
+    "    print('FSL cannot be configured automatically:', str(e))\n",
+    "if study_config.use_fsl is True:\n",
+    "    \n",
+    "    # Try to find an image in FSL installation directory\n",
+    "    test_image = '/usr/share/data/fsl-mni152-templates/MNI152_T1_1mm_brain.nii.gz'\n",
+    "    if not osp.exists(test_image):\n",
+    "        fsl_dir = os.environ.get('FSLDIR')\n",
+    "        if not fsl_dir and study_config.fsl_config is not Undefined:\n",
+    "            fsl_dir = osp.dirname(osp.dirname(osp.dirname(study_config.fsl_config)))\n",
+    "            if fsl_dir:\n",
+    "                test_image = glob(osp.join(fsl_dir, 'fslpython/envs/fslpython/lib/python*/site-packages/nibabel/tests/data/anatomical.nii'))\n",
+    "                if test_image:\n",
+    "                    test_image = test_image[0]\n",
+    "                else:\n",
+    "                    print('FSL test data cannot be found')\n",
+    "                    test_image = None\n",
+    "    \n",
+    "    if test_image:\n",
+    "        bet = study_config.get_process_instance(Bet)\n",
+    "        with tempfile.NamedTemporaryFile(suffix='.nii.gz') as tmp:\n",
+    "            bet.run(input_image=test_image, output_image=tmp.name)\n",
+    "            print('Output file size:', os.stat(bet.output_image).st_size)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Use Nipype in Capsul</h1>\n",
+    "\n",
+    "It is possible to use all the nipype interfaces (FSL, SPM, FreeSurfer, ...) as building blocks in Capsul. This step requires nipype to be properly installed as well as the software we want to use. For instance if we want to perform a brain extraction with FSL we can simply write:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from capsul.api import StudyConfig, get_process_instance\n",
+    "\n",
+    "study_config = StudyConfig(modules=StudyConfig.default_modules + ['NipypeConfig'])\n",
+    "\n",
+    "if study_config.use_nipype:\n",
+    "    betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
+    "    betpipe.get_help()\n",
+    "    betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\"\n",
+    "    betpipe.output_directory = '/tmp'\n",
+    "else:\n",
+    "    print('NiPype is not present.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown it is possible to set the BET algorithm input parameters. Note that in capsul the standard nipype outputs are prefixed with underscores. We can execute this Process but unfortunatelly, as mentioned by the nipype warnings, FSL needs to be configured in the study confit, otherwise the pipeline will not run. As we have done it above, we can run it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if study_config.use_nipype:\n",
+    "    study_config.reset_process_counter()\n",
+    "    study_config.run(betpipe, verbose=1)"
    ]
   },
   {
@@ -1320,170 +1517,6 @@
     "mp.proc_select2 = \"proc4\"\n",
     "print(\"switch proc_select2 value:\", mp.proc_select2)\n",
     "print(\"output image_out5:\", mp.image_out5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1>Use thirdparty software in Capsul</h1>\n",
-    "\n",
-    "Some thirdparty software nedd to be configured before they are called. StudyConfig is used to hold this\n",
-    "configuration. There are a set of modules that can be modified to enable/disable configuration of thirdparty \n",
-    "software.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from capsul.api import StudyConfig\n",
-    "\n",
-    "print(StudyConfig.default_modules)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to change modules that are used, one must give a full module list to StudyConfig():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "study_config = StudyConfig(modules=StudyConfig.default_modules + ['BrainVISAConfig', 'NipypeConfig'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Use FSL in Capsul</h2>\n",
-    "\n",
-    "FSL is called via specific subprocess-like functions taking into account a \n",
-    "configuration done in StudyConfig. If a StudyConfig is not\n",
-    "configured to use FSL, it may be automatically configured. Automatic\n",
-    "configuration had been tested in the two following cases :\n",
-    "<ol>\n",
-    "    <li>FSL was installed from the FMRIB site and, at least, FSLDIR \n",
-    "    environment variable is set (fsl.sh can be sourced or not)</li>\n",
-    "    <li>FSL was installed from Neurodebian packages</li>\n",
-    "</ol>\n",
-    "\n",
-    "Automatic configuration is done lazily. To start it, one must either use `StudyConfig(use_fsl=True)` or use one of the calling functions of `capsul.subprocess.fsl`.\n",
-    "\n",
-    "For calling FSL command with `capsul.subprocess.fsl` module, the first argument of\n",
-    "command line must be the FSL executable without any path nor prefix. \n",
-    "Prefix are used in Neurodebian install. For instance on Ubuntu 16.04 \n",
-    "Neurodebian FSL commands are prefixed with `fsl5.0-`.\n",
-    "The appropriate path and eventualy prefix are added from the configuration\n",
-    "of the `StudyConfig` instance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "import os.path as osp\n",
-    "import tempfile\n",
-    "\n",
-    "from traits.api import File, Undefined\n",
-    "\n",
-    "from capsul.api import StudyConfig, Process\n",
-    "from capsul.subprocess import fsl\n",
-    "    \n",
-    "class Bet(Process):\n",
-    "    '''\n",
-    "    A process that calls bet command without any parameter except imput and output files.\n",
-    "    '''\n",
-    "    input_image = File(optional=False, output=False)\n",
-    "    output_image = File(optional=False, output=True)\n",
-    "    \n",
-    "\n",
-    "    def _run_process(self):\n",
-    "        fsl.check_call(self.study_config, ['bet', self.input_image, self.output_image])\n",
-    "    \n",
-    "try:\n",
-    "    study_config = StudyConfig(use_fsl=True)\n",
-    "except EnvironmentError as e:\n",
-    "    # If FSL cannot be configured automatically, tells why\n",
-    "    print('FSL cannot be configured automatically:', str(e))\n",
-    "if study_config.use_fsl is True:\n",
-    "    \n",
-    "    # Try to find an image in FSL installation directory\n",
-    "    test_image = '/usr/share/data/fsl-mni152-templates/MNI152_T1_1mm_brain.nii.gz'\n",
-    "    if not osp.exists(test_image):\n",
-    "        fsl_dir = os.environ.get('FSLDIR')\n",
-    "        if not fsl_dir and study_config.fsl_config is not Undefined:\n",
-    "            fsl_dir = osp.dirname(osp.dirname(osp.dirname(study_config.fsl_config)))\n",
-    "            if fsl_dir:\n",
-    "                test_image = glob(osp.join(fsl_dir, 'fslpython/envs/fslpython/lib/python*/site-packages/nibabel/tests/data/anatomical.nii'))\n",
-    "                if test_image:\n",
-    "                    test_image = test_image[0]\n",
-    "                else:\n",
-    "                    print('FSL test data cannot be found')\n",
-    "                    test_image = None\n",
-    "    \n",
-    "    if test_image:\n",
-    "        bet = study_config.get_process_instance(Bet)\n",
-    "        with tempfile.NamedTemporaryFile(suffix='.nii.gz') as tmp:\n",
-    "            bet.run(input_image=test_image, output_image=tmp.name)\n",
-    "            print('Output file size:', os.stat(bet.output_image).st_size)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1>Use Nipype in Capsul</h1>\n",
-    "\n",
-    "It is possible to use all the nipype interfaces (FSL, SPM, FreeSurfer, ...) as building blocks in Capsul. This step requires nipype to be properly installed as well as the software we want to use. For instance if we want to perform a brain extraction with FSL we can simply write:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from capsul.api import get_process_instance\n",
-    "\n",
-    "study_config = StudyConfig(modules=StudyConfig.default_modules + ['NipypeConfig'])\n",
-    "\n",
-    "if study_config.use_nipype:\n",
-    "    betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
-    "    betpipe.get_help()\n",
-    "    betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\"\n",
-    "else:\n",
-    "    print('NiPype is not present.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As shown it is possible to set the BET algorithm input parameters. Note that in capsul the standard nipype outputs are prefixed with underscores. We can execute this Process but unfortunatelly, as mentioned by the nipype warnings, FSL needs to be configured in the study confit, otherwise the pipeline will not run. As we have done it above, we can run it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if study_config.use_nipype:\n",
-    "    study_config.reset_process_counter()\n",
-    "    study_config.run(betpipe, verbose=1)"
    ]
   },
   {
